--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -19,7 +19,7 @@ user.mobile.phone.number.not.valid=手机号格式错误
 user.login.success=登录成功
 user.register.success=注册成功
 user.notfound=请重新登录
-user.forcelogout=管理员强制退出，请重新登录
+user.force.logout=管理员强制退出，请重新登录
 user.unknown.error=未知错误，请重新登录
 ##文件上传消息
 upload.exceed.maxSize=上传的文件大小超出限制的文件大小！<br/>允许的文件最大大小是：{0}MB！
